--- a/.eslintrc
+++ b/.eslintrc
@@ -20,27 +20,27 @@
     "@typescript-eslint/no-unsafe-return": "error",
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/lines-between-class-members": [ "error", "always", { "exceptAfterSingleLine": true } ],
+    "@typescript-eslint/lines-between-class-members": ["error", "always", { "exceptAfterSingleLine": true }],
     "@typescript-eslint/non-nullable-type-assertion-style": "error",
     "@typescript-eslint/explicit-function-return-type": "error",
     // "@typescript-eslint/prefer-reduce-type-parameter": "error",
-    "@typescript-eslint/no-unsafe-enum-comparison": "error",  
-    "@typescript-eslint/no-empty-interface": "error",
-    "@typescript-eslint/member-ordering": [
-      "error",
-      {
-        "default": {
-          "memberTypes": [
-            "readonly-field",
-            "field",
-            ["get", "set"],
-            "constructor",
-            "method"
-          ],
-          // "order": "alphabetically"
-        }
-      }
-    ]
+    "@typescript-eslint/no-unsafe-enum-comparison": "error",
+    "@typescript-eslint/no-empty-interface": "error"
+    // "@typescript-eslint/member-ordering": [
+    //   "error",
+    //   {
+    //     "default": {
+    //       "memberTypes": [
+    //         "readonly-field",
+    //         "field",
+    //         ["get", "set"],
+    //         "constructor",
+    //         "method"
+    //       ],
+    //       // "order": "alphabetically"
+    //     }
+    //   }
+    // ]
     // "@typescript-eslint/explicit-member-accessibility": [
     //   "error",
     //   {
