--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
     /* Language and Environment */
-    //"target": "esnext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    //"target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "lib": [
       "ESNext.Array",
       "DOM",
